--- a/ProgressiveJS.com/Views/Home/_DataFormModelView.cshtml
+++ b/ProgressiveJS.com/Views/Home/_DataFormModelView.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProgressiveJS.com.Models.DataFormModel
+﻿@model DataFormModel
 @Html.LabelFor(x => x.FirstName)
 @Html.TextBoxFor(x => x.FirstName)
 @Html.ValidationMessageFor(x => x.FirstName)
