--- a/ProgressiveJS.com/scss/app/_mvc-validation.scss
+++ b/ProgressiveJS.com/scss/app/_mvc-validation.scss
@@ -15,4 +15,5 @@ input:focus.input-validation-error {
     padding: .5em;
     display: block;
     margin-bottom: 1em;
+    box-shadow: 0 0 5px #f04124;
 }
