--- a/ProgressiveJS.com/Views/Home/Demo.cshtml
+++ b/ProgressiveJS.com/Views/Home/Demo.cshtml
@@ -4,25 +4,7 @@
     <div class="medium-4 large-3 columns">
         <div class="hide-for-small">
             <div class="sidebar">
-                <h5>Documentation</h5>
-                <nav>
-                    <ul class="side-nav">
-                        <li class="heading">Progressive Forms</li>
-                        <li><a href="#basic-form">Basic Progressive Forms</a></li>
-                        <li><a href="#data-forms">Forms with Data</a></li>
-                        <li><a href="#wizard">Multi-step Wizards</a></li>
-                        <li><a href="#reinitialization-form">JavaScript Reinitialization</a></li>
-                        <li><a href="#main-response-form">Main Response</a></li>
-                        <li><a href="#items-form">Items</a></li>
-                        <li><a href="#callbacks-form">Callbacks</a></li>
-                        <li><a href="#commands-form">Commands</a></li>
-                        <li class="divider"></li>
-
-                        <li class="heading">"Progressive" Items</li>
-                        <li><a href="#single-element">Single element enhancement</a></li>
-                        <li class="divider"></li>
-                    </ul>
-                </nav>
+                @Html.Partial("_DemoSideNav")
             </div>
         </div>
     </div>
@@ -31,129 +13,13 @@
         <p>Getting started with ProgressiveJS is easy. To help you get started, we have provided some examples of all the ways that you can use ProgressiveJS.</p>
 
         <h3 id="basic-form">Basic Progressive Forms</h3>
-        <p>
-            The typical pattern for HTML development consists of the "POST-REDIRECT-GET" pattern.
-            While there is nothing technically wrong with this pattern, it can make for a poor user experience.
-            When you click the button below, you will notice the full-page postback.
-        </p>
+        @Html.Partial("_DemoStandardHTMLForm")
 
-        <div class="row">
-            <div class="small-12 columns">
-                <fieldset>
-                    <legend>Standard HTML Form</legend>
-
-<pre class="prettyprint"><code>
-&lt;form action="/Home/SingleButtonForm" method="post"&gt;
-    &lt;div class="pjs-response"&gt;
-        @@ProgressiveAlert.Render(TempData)
-    &lt;/div&gt;
-    &lt;button class="button small" type="submit"&gt;Click me&lt;/button&gt;
-&lt;/form&gt;
-</code>
-</pre><br />
-
-                    @using (Html.BeginForm("SingleButtonForm", "Home"))
-                    {
-                        <div class="pjs-response">@ProgressiveAlert.Render(TempData)</div>
-                        <button class="button small" type="submit">Click me</button>
-                    }
-                </fieldset>
-            </div>
-        </div>
-
-        <p>ProgressiveJS gives you a quick and easy way to progressively enhance your HTML forms. Try clicking the button in the form below to see ProgressiveJS in action.</p>
-
-        <div class="row">
-            <div class="small-12 columns">
-                <fieldset id="simple-form">
-                    <legend>Simple ProgressiveJS Form</legend>
-
-<pre class="prettyprint"><code>
-&lt;form action="/Home/SingleButtonForm" method="post"
-    data-pjs-form="{
-        'target':'.pjs-response',
-        'globalTarget':false,
-        'resetForm':true,
-        'clearForm':false,
-        'locationOnSuccess':null,
-        'additionalFields':null,
-        'callbacks':[]
-    }"&gt;
-    &lt;div class="pjs-response"&gt;
-        @@ProgressiveAlert.Render(TempData)
-    &lt;/div&gt;
-    &lt;button class="button small" type="submit"&gt;Click me&lt;/button&gt;
-&lt;/form&gt;
-</code>
-</pre><br />
-
-                    @using (Html.BeginForm("SingleButtonForm", "Home", FormMethod.Post, new { data_pjs_form = new ProgressiveForm(globalTarget: false).ToJson() }))
-                    {
-                        <div class="pjs-response"></div>
-                        <button class="button small" type="submit">Click me</button>
-                    }
-                </fieldset>
-            </div>
-        </div>
-
-        <p>
-            Of special note is the data-pjs-form attribute which includes the specific configuration for this ProgressiveJS form. The configuration for any ProgressiveJS element can be provided via a Json
-            configuration string as is done here. ProgressiveJS also gives you some helpers to make creating these configurations a lot easier. More about that below.
-        </p>
+        @Html.Partial("_DemoBasicProgressiveForm")
 
         <h3 id="data-forms">Forms with Data</h3>
-
-        <p>
-            It will probably be pretty rare that you just have a single button on a form. So, maybe you would like to send some data back to the server and get that (or something else) as a response.
-            While we are at it, we might as well add some validation to the form as well. ProgressiveJS works out of the box with the jquery.validate and jquery.validate.unobtrusive plugins if you are so inclined.
-        </p>
-
-        <div class="row">
-            <div class="small-12 columns">
-                <fieldset id="simple-form">
-                    <legend>Forms with data and unobtrusive validation</legend>
-
-<pre class="prettyprint"><code>
-&lt;form action="/Home/DataForm" method="post"
-    data-pjs-form="@@(
-        new ProgressiveForm(
-            globalTarget: false,
-            resetForm: false
-        )
-        .ToJson()
-    )"&gt;
-    &lt;div class="pjs-response"&gt;&lt;/div&gt;
-    &lt;label for="FirstName"&gt;First Name&lt;/label&gt;
-    &lt;input id="FirstName" name="FirstName" type="text" value=""
-           data-val="true"
-           data-val-required="Your first name is required."&gt;
-    &lt;span  class="field-validation-valid"
-           data-valmsg-for="FirstName"
-           data-valmsg-replace="true"&gt;&lt;/span&gt;
-    &lt;label for="LastName"&gt;Last Name&lt;/label&gt;
-    &lt;input id="LastName" name="LastName" type="text" value=""&gt;
-    &lt;span  class="field-validation-valid"
-           data-valmsg-for="LastName"
-           data-valmsg-replace="true"&gt;&lt;/span&gt;
-    &lt;button class="button small" type="submit"&gt;Submit&lt;/button&gt;
-&lt;/form&gt;
-</code></pre>
-
-                    @using (Html.BeginForm("DataForm", "Home", FormMethod.Post, new { data_pjs_form = new ProgressiveForm(globalTarget: false, resetForm: false).ToJson() }))
-                    {
-                        <div class="pjs-response"></div>
-                        @Html.Partial("_DataFormModelView", new ProgressiveJS.com.Models.DataFormModel())
-                        <button class="button small" type="submit">Submit</button>
-                    }
-                </fieldset>
-
-                <p>
-                    Here, you will notice the use of the congifuration helper mentioned above. In this case, we created a ProgressiveForm object and then we serialized that to the Json configuration string.
-                    The Json string rendered will be similar to the configuration string you saw previously but with the options for globalTarget and resetForm set to false.
-                </p>
+        @Html.Partial("_DemoProgressiveDataForm")
 
 
-            </div>
-        </div>
     </div>
 </div>
